[package]
name = "regolith"
version = "0.1.0"
edition = "2021"

[dependencies]
# ECS framework with built-in wgpu support
bevy = { version = "0.12", features = ["dynamic_linking"] }
# Math utilities
glam = "0.25"
# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For logging
log = "0.4"
env_logger = "0.10"
# For random number generation
rand = "0.8"